--- a/fabcar/api/package.json
+++ b/fabcar/api/package.json
@@ -16,6 +16,7 @@
     "license": "Apache-2.0",
     "dependencies": {
         "body-parser": "^1.20.1",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
         "fabric-ca-client": "^2.2.4",
         "fabric-network": "^2.2.4"
